[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "abm_wti"
version = "0.0.1"
description = "Agent based model for WTI price"
authors = [
  { name = "mlouder" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.9.0"


[tool.ruff]
line-length = 99
src = ["abm_wti"]
include = ["pyproject.toml", "abm_wti/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["abm_wti"]
force-sort-within-sections = true

